# sci-vault

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  buf.gen.yaml  docker-compose.yaml  sci-vault.code-workspace
.claude/: CLAUDE.md
.github/: SECURITY.md
.github/workflows/: ci.yaml  ci.yml
docs/: thesis.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  nginx.example.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: i18n.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
proto/health/: health.proto
proto/recommender/: recommender.proto
proto/recommender/v1/: recommender.proto
svc-gateway/: .dockerignore  .gitignore  Dockerfile  README.md  config.docker.example.yaml  config.example.yaml  go.mod  go.sum  main.go
svc-gateway/app/: app.go
svc-gateway/internal/config/: config.go
svc-recommender/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  config.docker.example.yaml  config.example.yaml  main.py  pyproject.toml  test_genai.py
svc-recommender/src/: config.py  genai_client.py  server.py
svc-recommender/src/cache/: __init__.py  enrichment.py  query_embedding.py  search.py
svc-recommender/src/conversion/: __init__.py  converter.py  office.py
svc-recommender/src/genai/: __init__.py  document.py  embedding_resolver.py  query_embedder.py  search.py  translate.py
svc-recommender/src/infrastructure/: __init__.py  cache.py  database.py  genai.py  storage.py
svc-recommender/src/interceptor/: logging.py
svc-recommender/src/pb/recommender/v1/: recommender_pb2.py  recommender_pb2.pyi  recommender_pb2_grpc.py
svc-recommender/src/repository/: __init__.py  document.py  query_embedding.py  recommend.py  search.py  types.py
svc-recommender/src/servicer/: document.py  health.py  recommend.py  search.py  translate.py
svc-recommender/src/storage/: __init__.py  document.py
svc-recommender/src/utils/: __init__.py  query_embedding_key.py
tools/arxiv-downloader/: .gitignore  README.md  main.py  pyproject.toml
(+124 files in other folders)
