[project]
name = "svc-recommender"
version = "0.1.0"
description = "Recommendation engine gRPC service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # reason: Caused major outage with gcloud serveless environments: https://github.com/grpc/grpc/issues/41725
    "grpcio==1.78.0",
    "protobuf>=7.34.1",
    "pyyaml>=6.0.3",
    "types-protobuf>=6.32.1.20260221",
]

# src/ and src/pb/ are added to sys.path by main.py at runtime;
# no installable package is needed for this service.
