[project]
name = "svc-recommender"
version = "0.1.0"
description = "Recommendation engine gRPC service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.78",
    "boto3-stubs[s3]>=1.42.78",
    "google-genai>=1.69.0",
    # reason: Caused major outage with gcloud serveless environments: https://github.com/grpc/grpc/issues/41725
    "grpcio==1.78.0",
    "numpy>=2.4.4",
    "pgvector>=0.4.2",
    "protobuf>=7.34.1",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "types-protobuf>=6.32.1.20260221",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

# src/ and src/pb/ are added to sys.path by main.py at runtime;
# no installable package is needed for this service.
